--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .main-background {
+    background: rgb(2, 33, 64);
+    background: linear-gradient(
+      90deg,
+      rgba(2, 33, 64, 1) 0%,
+      rgba(38, 80, 119, 1) 100%
+    );
+  }
+}
