--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,9 @@
     );
   }
 }
+
+@layer components {
+  .hero-section-button {
+    @apply text-white border border-white rounded-lg py-2 px-6 text-lg me-4 transition duration-300 hover:bg-white hover:text-lightBlue
+  }
+}
