--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,28 @@
       rgba(38, 80, 119, 1) 100%
     );
   }
+
+  .title::after {
+    content: '';
+    display: inline-block;
+    width: 4px;
+    height: 50px;
+    margin-left: 5px;
+    background-color: black;
+    animation: blink-caret .5s ease infinite;
+  }
+
+  @keyframes blink-caret {
+    0% {
+      background-color: transparent;
+    }
+    50% {
+      background-color: black;
+    }
+    100% {
+      background-color: transparent;
+    }
+  }
 }
 
 @layer components {
