--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,10 @@
     animation: blink-caret .6s ease infinite;
   }
 
+  .project-background {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+
   @keyframes blink-caret {
     0% {
       background-color: transparent;
