--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,19 @@
     background-color: rgba(0, 0, 0, 0.3);
   }
 
+  .dot {
+    width: 15px;
+    height: 15px;
+    border: 1px solid black;
+    border-radius: 50%;
+    margin: 0 5px;
+    cursor: pointer;
+  }
+
+  .dot.selected {
+    background-color: black;
+  }
+
   @keyframes blink-caret {
     0% {
       background-color: transparent;
