--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,16 @@
 @tailwind utilities;
 
 @layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+
   .main-background {
     background: rgb(2, 33, 64);
     background: linear-gradient(
@@ -37,6 +47,12 @@
 
   .dot.selected {
     background-color: black;
+  }
+
+  .readme-border {
+    width: 100%;
+    height: 1.5px;
+    background-color: rgba(0, 0, 0, 0.2);
   }
 
   @keyframes blink-caret {
