--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,43 @@
     scrollbar-width: none; /* Firefox */
   }
 
+  /* HTML: <div class="loader"></div> */
+  .loader {
+    width: 50px;
+    aspect-ratio: 1;
+    display: grid;
+    border-radius: 50%;
+    background: linear-gradient(
+          0deg,
+          rgb(0 0 0/50%) 30%,
+          #0000 0 70%,
+          rgb(0 0 0/100%) 0
+        )
+        50%/8% 100%,
+      linear-gradient(90deg, rgb(0 0 0/25%) 30%, #0000 0 70%, rgb(0 0 0/75%) 0)
+        50%/100% 8%;
+    background-repeat: no-repeat;
+    animation: l23 1s infinite steps(12);
+  }
+  .loader::before,
+  .loader::after {
+    content: "";
+    grid-area: 1/1;
+    border-radius: 50%;
+    background: inherit;
+    opacity: 0.915;
+    transform: rotate(30deg);
+  }
+  .loader::after {
+    opacity: 0.83;
+    transform: rotate(60deg);
+  }
+  @keyframes l23 {
+    100% {
+      transform: rotate(1turn);
+    }
+  }
+
   .main-background {
     background: rgb(2, 33, 64);
     background: linear-gradient(
@@ -27,13 +64,13 @@
   }
 
   .title::after {
-    content: '';
+    content: "";
     display: inline-block;
     width: 4px;
     height: 50px;
     margin-left: 5px;
     background-color: black;
-    animation: blink-caret .6s ease infinite;
+    animation: blink-caret 0.6s ease infinite;
   }
 
   @media screen and (max-width: 1024px) {
@@ -81,6 +118,6 @@
 
 @layer components {
   .hero-section-button {
-    @apply text-white border border-white rounded-lg py-2 px-6 text-lg me-4 transition duration-300 hover:bg-white hover:text-lightBlue
+    @apply text-white border border-white rounded-lg py-2 px-6 text-lg me-4 transition duration-300 hover:bg-white hover:text-lightBlue;
   }
 }
