--- a/src/index.css
+++ b/src/index.css
@@ -108,7 +108,7 @@
       background-color: transparent;
     }
     50% {
-      background-color: #06a94d;
+      background-color: #22c55e;
     }
     100% {
       background-color: transparent;
