Create redirect screen design

--- a/src/shared/components/RedirectLoader/RedirectLoader.module.css
+++ b/src/shared/components/RedirectLoader/RedirectLoader.module.css
@@ -1,7 +1,7 @@
 /* HTML: <div class="loader"></div> */
 .loader {
-  --c1: #673b14;
-  --c2: #f8b13b;
+  --c1: #000;
+  --c2: #fff;
   width: 40px;
   height: 80px;
   border-top: 4px solid var(--c1);
